--- a/homework1/package.json
+++ b/homework1/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-uuid": "^1.0.2",
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
     "web-vitals": "^1.1.1"
