--- a/homework1/package.json
+++ b/homework1/package.json
@@ -15,6 +15,7 @@
     "react-uuid": "^1.0.2",
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
