--- a/homework1/package.json
+++ b/homework1/package.json
@@ -9,12 +9,14 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-pure-lifecycle": "^3.0.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-uuid": "^1.0.2",
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
+    "redux-thunk": "^2.3.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.1"
   },
