--- a/homework1/webapp/package.json
+++ b/homework1/webapp/package.json
@@ -2,10 +2,14 @@
   "name": "homework1",
   "version": "0.1.0",
   "private": true,
+	"proxy": "http://localhost:4000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
