--- a/homework1/core/package.json
+++ b/homework1/core/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node ./src/index.js",
+    "compilation": "tsc --watch",
+    "dev": "nodemon ./dist/index.js",
+    "start": "node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,9 +15,19 @@
     "@babel/cli": "^7.13.16",
     "@babel/core": "^7.13.16",
     "@babel/node": "^7.13.13",
-    "@babel/preset-env": "^7.13.15"
+    "@babel/preset-env": "^7.13.15",
+    "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.0.2",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.4",
+    "express": "^4.17.1",
+    "module-alias": "^2.2.2",
+    "pg": "^8.6.0",
+    "typeorm": "^0.2.32",
+    "typescript": "^4.2.4",
+    "uuid": "^8.3.2"
   }
 }
