--- a/homework1/core/package.json
+++ b/homework1/core/package.json
@@ -23,7 +23,9 @@
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.4",
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "pg": "^8.6.0",
     "typeorm": "^0.2.32",
